# mouseless

./: .gitignore  Cargo.toml  Cargo_test.toml  DESIGN_UPDATE.md  GRID_MODE_IMPLEMENTATION_SUMMARY.md  INTERFACE_PREVIEW.md  MOUSE_CONTROLLER_OPTIMIZATION.md  README.md  REFACTORING_SUMMARY.md  debug_capslock_movement.rs  demo_grid.rs  test_capslock.rs  test_grid.html  test_grid_activation.html  test_key_combinations.rs  test_key_mapping.rs
.kiro/specs/rust-mouseless/: design.md  requirements.md  tasks.md
mouseless-app/: .gitignore  Cargo.toml  README.md  example.mouseless.toml  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  vite.config.ts
mouseless-app/frontend/: index.html  overlay.html
mouseless-app/frontend/src/: App.tsx  OverlayApp.tsx  SettingsApp.tsx  TestApp.tsx  index.css  main.tsx  types.ts
mouseless-app/frontend/src/components/: ActivationIndicator.tsx  AreaOverlay.tsx  GridOverlay.tsx  KeyFeedback.tsx  PermissionCheck.tsx  PredictionOverlay.tsx
mouseless-app/src/: main.rs  tauri_commands.rs  ui_manager.rs
mouseless-core/: .gitignore  Cargo.toml
mouseless-core/benches/: animation_performance.rs
mouseless-core/examples/: mode_demo.rs  mouse_demo.rs  mouse_performance_test.rs  mouse_service_demo.rs  rdev_input_demo.rs
mouseless-core/src/: animation.rs  area_mode.rs  basic_mode.rs  config.rs  error.rs  grid.rs  grid_mode.rs  input.rs  integration_tests.rs  lib.rs  logging.rs  mode.rs  models.rs  mouse.rs  mouse_service.rs  screen.rs  traits.rs
mouseless-core/tests/: mouse_service_integration.rs
