[workspace]
members = ["mouseless-app", "mouseless-core"]
resolver = "2"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Mouse and input control
enigo = "0.2"
rdev = { git = "https://github.com/Narsil/rdev", branch = "main" }

# UI framework
tauri = { version = "2.0", features = ["macos-private-api", "tray-icon"] }

# Configuration
toml = "0.8"
dirs = "5.0"

# Async utilities
async-trait = "0.1"
