[package]
name = "mouseless-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri = { workspace = true }

# Local dependencies
mouseless-core = { path = "../mouseless-core" }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
