[package]
name = "mouseless-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
enigo = { workspace = true }
rdev = { workspace = true }
async-trait = { workspace = true }

# Additional core dependencies
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
toml = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "animation_performance"
harness = false

[[example]]
name = "rdev_input_demo"
path = "examples/rdev_input_demo.rs"

[[example]]
name = "test_capslock"
path = "examples/test_capslock.rs"